--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My NGINX Page</title>
+  <title>แก้แล้วคับเปลี่ยนให้พ้มหน่อย</title>
 </head>
 
 <body>
-  <h1>Welcome to My NGINX Page!</h1>
-  <p>This is a sample page served by NGINX in Kubernetes.</p>
+  <h1>แง่งๆๆๆๆๆๆๆๆๆ</p>
 </body>
 
 </html>
